sentinel_config/spec/test-fixtures/latest/overrides/v2_plugin_import_with_no_primary.txtar
-- sentinel.hcl --
-- sentinel_override.hcl --


import "plugin" "module1" {
  source = "override.binary"
  args = ["-override"]
  env = {
    FOO = "bar"
  }
  config = {
    number = 42
  }
}
  
-- astOut.json --
{
  "_t": "File",
  "_p": {
    "globals": {},
    "imports": {},
    "mocks": {},
    "params": {},
    "policies": {},
    "sentineloptions": null,
    "test": null
  }
}
-- diagOut.txt --
ERROR: There is no plugin import named "module1". An override file can only override a plugin import that was already declared in a primary configuration file.:sentinel_override.hcl:2,0->2,25
